0023753: Test case bugs modalg_2 bug19793_2 works too long on Linux platform

class IntTools_ShrunkRange
method void IntTools_ShrunkRange::Perform()
Fix to avoid creation of small section edges.

Correction of test case for issue CR23753